fixing video size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -129,4 +129,11 @@
     font-weight: 400;
 }
 
+#mainVideo {
+    width: 100%;
+    height: 50vh;
+    overflow: hidden;
+    filter: brightness(0.7);    
+}
+
 }
